src/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pitstop-ingress
  namespace: pitstop
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#   cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.groep1.k8s.devops.aimsites.nl
    - http:
        paths:
          - backend:
              service:
                name: webapp
                port:
                  number: 7005
            pathType: ImplementationSpecific
            path: /
